dashboard/static/css/style.css
/* ----- General styles ----- */

body {
    min-height: 100vh;
    font-family: 'Arvo', serif;
}

::-moz-selection { /* Code for Firefox */
    color: #ffffff;
    background: #79BF93;
}

::selection {
    color: #ffffff;
    background: #79BF93;
}

.btn {
    transition: 0.3s;
}

.flex-grow {
    flex: 1;
 }

.navbar {
    background-color: #fff;
    border-bottom: 1px solid #e2e2e2;
}

.navbar .navbar-brand,
.auth-container h1 {
    color: #629781;
    font-weight: 600;
    font-size: 18px;
}

.navbar .navbar-brand:hover {
    color: #629781;
}

.navbar .navbar-brand .text-dashboard,
.auth-container h1 .text-dashboard {
    color: #bbbbbb;
}

.navbar .user-button {
    margin-right: 10px;
}

.navbar .user-button,
.navbar .logout-button,
.navbar .logout-button i {
    background-color: white;
    color: #909090;
}

.navbar .user-button:hover {
    background-color: #55b37724;
    color: #55B377;
}

.navbar .user-button i {
    margin-right: 3px;
}

.navbar .logout-button {
    color: white;
}

.navbar .logout-button i {
    margin-left: 3px;
}

.navbar .logout-button:hover,
.navbar .logout-button:hover i {
    color: #c11b1b;
}

.green-button {
    font-weight: bold;
    text-transform: uppercase;
    color: #55B377;
    background-color: #55b37724;
}

.green-button:hover {
    box-shadow: 0 0 0 2px #55b377ad;
    color: #55B377;
}

.sawaliram-container {
    margin-top: 90px;
    margin-bottom: 60px;
}

.sawaliram-container .form-control {
    border: 0;
    border-radius: 0;
    border-bottom: 1px solid grey;
}

.sawaliram-container .form-control:focus {
    box-shadow: none;
    border-bottom: 2px solid #444;
}

footer {
    text-align: center;
    padding: 20px;
    padding-bottom: 50px; 
    color: #757575;
}

footer p {
    margin-bottom: 3px;
}

.grey-link {
    color: #757575;
    text-decoration: underline;
}

.grey-link:hover {
    color: #629781;
}

/* ----- Home styles ----- */

h1.dashboard-home-greeting {
    font-size: 26px;
    font-weight: 600;
    color: #8e8e8e;
    text-align: center;
}

.task-list {
    margin-top: 50px;
}

.task-list .task-card {
    color: black;
    max-width: 1000px;
    text-align: left;
    border-radius: 5px;
    padding-bottom: 17px;
    transition: 0.3s;
    margin: auto;
    margin-bottom: 30px;
    border: 3px solid #e6e6e6;
    border-style: dotted;
}

.task-list .task-card a {
    text-decoration: none;
}

.task-list .task-card:hover {
    border-color: #55b37799;
    text-decoration: none;
}

.task-list .task-card:hover .task-stat {
    color: #55B377;
}

.task-list .task-card h3 {
    font-size: 19px;
    margin-top: 23px;
    margin-bottom: 4px;
    font-weight: 600;
}

.task-list .task-card p {
    font-size: 17px;
    color: #8e8e8e;
}

.task-list .task-card .task-stat {
    font-style: italic;
    color: #b5b5b5;
    font-size: 15px;
    transition: 1s;
}

.task-list .task-card .task-icon {
    margin: 25px;
    margin-right: 30px;
}

.task-list .task-card .sub-task-button {
    margin-right: 10px;
    border: none;
    padding: 7px 20px;
    margin-top: 5px;
    text-transform: none;
    font-weight: normal;
}

.task-list .task-card .sub-task-button i {
    margin-right: 5px;
}

.task-list .task-card.task-with-sub-tasks {
    padding-bottom: 25px;
}

/* ----- Task pages styles ----- */

h1.task-heading {
    font-size: 30px;
    font-weight: 600;
}

h2.task-sub-heading {
    font-size: 20px;
    font-weight: normal;
    color: #757575;
}

.task-hr {
    margin-bottom: 35px;
}

.task-info {
    background-color: #f7f7f7;
    border-radius: 3px;
    color: #7a7a7a;
    padding: 10px;
    margin-bottom: 20px;
}

.task-info a {
    color: #7a7a7a;
    text-decoration: underline;
}

h3.task-section-heading {
    font-size: 22px;
    margin-bottom: 20px;
    font-weight: 600;
    color: #777777;
}

h4.task-section-sub-heading {
    font-size: 18px;
    margin-bottom: 20px;
}

/* submit-questions */
.question-submission-form {
    color: #6f6f6f;
}

.question-submission-form .form-group {
    margin-bottom: 40px;
}

.required-field-text {
    color: #a0a0a0;
    font-style: italic;
}

.published-information {
    display: none;
}

.question-card {
    margin-bottom: 25px;
}

.delete-question-button {
    position: absolute;
    right: 15px;
    top: 11px;
    background: none;
    border: none;
    cursor: pointer;
    color: #a7a7a7;
    display: none;
}

.delete-question-button:hover {
    color: #dc3545;
}

.add-question-button {
    background-color: #eaeaea;
    color: #444;
}

.add-question-button:hover {
    background-color: #e2e2e2;
}

.btn.add-question-button:focus {
    box-shadow: none;
}

/* submit-excel-sheet */
.first-excel-data-type-radio-button {
    margin-bottom: 10px;
}

.custom-file-input {
    cursor: pointer;
}

.template-download-message {
    margin-bottom: 30px;
}

/* view-questions */
.filter-area {
    margin-bottom: 40px;
}

#filterForm .filter-form-section-label {
    color: #888;
}

#questionsList .card {
    border: none;
    color: #b7b7b7;
}

#questionsList .card:not(:last-child) {
    margin-bottom: 40px;
}

#questionsList .card .card-header {
    padding: 0;
    border-bottom: none;
    background: none;
}

#questionsList .card .card-header h3 {
    color: #444;
    font-size: 18px;
    margin-bottom: 5px;
}

#questionsList .card .card-body {
    padding: 10px 15px;
    padding-left: 0;
    font-size: 15px;
}

#questionsList .card .card-body .highlighted-meta-area {
    margin-bottom: 13px;
}

#questionsList .card .card-body .highlighted-meta {
    border: 1px solid;
    border-radius: 3px;
    margin-right: 10px;
    padding: 2px;
    padding-right: 10px;
    font-size: 14px;
}

#questionsList .card .card-body .highlighted-meta i {
    font-size: 13px;
    margin: 0 5px;
}

#questionsList .card .card-body .meta-phrase-section {
    margin-bottom: 13px;
}

#questionsList .card .card-body .meta-value {
    color: #545454;
}

#questionsList .empty-result-text {
    text-align: center;
    color: #4e4e4e;
}

/* ----- Action successfull pages styles ----- */

.action-success-page-wrapper {
    text-align: center;
    margin-top: 160px;
    margin-bottom: 20px;
}

.action-success-page-wrapper i {
    font-size: 35px;
    color: green;
}

.action-success-page-wrapper h1 {
    font-size: 32px;
    margin-top: 15px;
}

.action-success-page-wrapper p {
    color: #757575;
}

.action-success-page-wrapper a {
    color: #3a3a3a;
    text-decoration: underline;
}

/* ----- Standalone pages styles ----- */

.error-page-wrapper {
    text-align: center;
    margin-top: 40px;
}

.error-page-wrapper h3 {
    margin-top: 20px;
    margin-bottom: 40px;
}

.auth-container {
    width: 35%;
    /* padding: 100px 0; */
    text-align: center;
    /* margin: auto; */
    margin: 0;
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.auth-container h1 {
    font-size: 25px;
    margin-bottom: 35px;
}

.auth-container .login-form, .auth-container .signup-form {
    margin-bottom: 40px;
}

.auth-container .signup-link, .auth-container .signin-link {
    text-decoration: underline;
}

.auth-container .error-message {
    color: #b90000;
}

.auth-container .signup-form {
    text-align: left;
}

.auth-container .signup-form .organisation-dropdown {
    margin-top: 30px;
}

.auth-container .signup-form .access-request-checkbox {
    margin-top: 45px;
    margin-bottom: 15px;
}

.auth-container .signup-form .other-organisation-textbox {
    display: none;
}

.auth-container .auth-submit-button {
    margin-top: 35px;
}

